--- a/plonetheme/teylersmuseum/browser/css/theme.css
+++ b/plonetheme/teylersmuseum/browser/css/theme.css
@@ -81,8 +81,17 @@ body:not(.portaltype-product) ol.breadcrumb {
     display: none;
 }
 
-#ajax-spinner {
+body:not(.template-search) #ajax-spinner {
     display: none !important;
+}
+
+body.template-search #ajax-spinner {
+    background: none !important;
+    top: 90% !important;
+    margin-top: -25px !important;
+    margin-left: -33px !important;
+    width: 66px !important;
+    height: 66px !important;
 }
 
 h1 {
@@ -606,7 +615,7 @@ body.portaltype-portlet-page #parent-fieldname-description {
 
 #content-core .portletCollection .portletFooter {
     text-align: center;
-    padding-bottom: 100px;
+    /*padding-bottom: 100px;*/
     margin-top: 30px;
 }
 
@@ -783,7 +792,7 @@ body.portaltype-portlet-page #content-core .thumbnail a {
 }
 
 #content-core .portletMailChimp .rowlike {
-    margin: 0 0 100px;
+    margin: 0 0 0px;
 }
 
 #content-core .portletMailChimp .portletHeader h1 {
@@ -1172,7 +1181,7 @@ body.template-login_form #content-core {
     font-family: 'Merriweather', serif;
     font-weight: 400;
     font-size: 1.000em;
-    color: #999999;
+    color: #000000;
     background-color: #f5f5f5;
     border: 0;
     -webkit-box-shadow: none;
@@ -1199,7 +1208,7 @@ body.template-login_form #content-core {
     font-family: 'Merriweather', serif;
     font-weight: 400;
     font-size: 1.000em;
-    color: #999999;
+    color: #000000;
     background-color: #f5f5f5;
     border: 0;
     -webkit-box-shadow: none;
@@ -1230,8 +1239,8 @@ body.template-login_form #content-core {
 }
 
 #content .pfg-form .formControls .btn:hover {
-    background-color: #D75745;
-    border-color: #D75745;
+    background-color: #000000;
+    border-color: #000000;
     border-radius: 30px;
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
@@ -1287,7 +1296,7 @@ body.template-login_form #content-core {
     font-family: 'Merriweather', serif;
     font-weight: 400;
     font-size: 1.000em !important;
-    color: #999999;
+    color: #000000;
     background-color: #f5f5f5;
     border: 0;
     -webkit-box-shadow: none;
@@ -2719,6 +2728,7 @@ body.portaltype-media-person .social-viewlet {
 
     #content-core div[id*='parent-fieldname-text'] img, #content-core dd.portletItem img {
         width: auto;
+        max-width: 100%;
     }
 
     #content-core dd.portletItem > * {
@@ -2753,6 +2763,7 @@ body.portaltype-media-person .social-viewlet {
 
     #content-core div[id*='parent-fieldname-text'] img, #content-core dd.portletItem img {
         width: auto;
+        max-width: 100%;
     }
 
     #content-core dt.portletHeader {
@@ -2798,6 +2809,7 @@ body.portaltype-media-person .social-viewlet {
     #content-core div[id*='parent-fieldname-text'] img,
     #content-core dd.portletItem img {
         width: auto;
+        max-width: 100%;
     }
 
     #content-core dt.portletHeader {
@@ -2926,6 +2938,7 @@ body.portaltype-media-person .social-viewlet {
     #content-core div[id*='parent-fieldname-text'] img,
     #content-core dd.portletItem img {
         width: auto;
+        max-width: 100%;
       }
 
     #content-core #portlet_bodytext div[id*='parent-fieldname-text'] > p {
@@ -4552,6 +4565,24 @@ body:not(.template-folder_contents):not(.template-sharing):not(.template-usergro
     background-color: #2B2B2B;
 }
 
+body.template-double_view header {
+    background-color: #ffffff !important;
+}
+
+body.template-double_view {
+    background-color: #ffffff !important;
+}
+
+body.template-double_view .slideshow {
+    background-color: #ffffff !important;
+}
+
+body.template-double_view #portal-logo img {
+    content: url('++resource++plonetheme.bootstrapModern.css/teylers_black.png') !important;
+}
+
+
+
 .portaltype-object #edit-content-views {
 }
 
@@ -5633,6 +5664,10 @@ body.template-content_view #content-core #parent-fieldname-text-dates > * {
     color: #D75745 !important;
 }
 
+.item-prices {
+    color: #D75745 !important;
+}
+
 #collection-filters {
     display: none;
 }
@@ -5840,7 +5875,26 @@ body.template-search #search-page-header .documentFirstHeading, body.template-se
     }
 }
 
+#submit_search_div input[type="submit"]:focus, #input-search-menu:focus {
+  border-color: none !important;
+  box-shadow: none !important;
+  -webkit-box-shadow: none !important;
+  outline: none !important;
+}
+
+.btn-default:focus {
+    border-color: none !important;
+    box-shadow: none !important;
+    -webkit-box-shadow: none !important;
+}
+
 /* WEBSHOP */
+
+#cart_viewlet {
+    position: absolute;
+    top: 0;
+    right: 0;
+}
 
 .visualClear:after {
     clear: both;
@@ -5893,11 +5947,11 @@ body.template-search #search-page-header .documentFirstHeading, body.template-se
 }
 
 #tag-checkout-payment_selection-heading {
-    display: none;
+    /*display: none;*/
 }
 
 #field-checkout-payment_selection-payment {
-    display: none;
+    /*display: none;*/
 }
 
 #viewlet-below-content-body {
@@ -5993,7 +6047,7 @@ dl.details input[type="text"] {
     font-family: 'Merriweather', serif !important;
     font-weight: 400 !important;
     font-size: 0.875em !important;
-    color: #999999 !important;
+    color: #000000 !important;
     background-color: #f5f5f5 !important;
     border: 0 !important;
     -webkit-box-shadow: none !important;
@@ -6039,7 +6093,7 @@ dl.details input[type="text"].cart_item_count {
     font-family: 'Merriweather', serif !important;
     font-weight: 400 !important;
     font-size: 1.000em !important;
-    color: #999999 !important;
+    color: #000000 !important;
     background-color: #f5f5f5 !important;
     border: 0 !important;
     -webkit-box-shadow: none !important;
@@ -6058,7 +6112,7 @@ dl.details input[type="text"].cart_item_count {
     font-family: 'Merriweather', serif !important;
     font-weight: 400 !important;
     font-size: 1.000em !important;
-    color: #999999 !important;
+    color: #000000 !important;
 }
 
 #input-checkout-checkout_back,
@@ -6107,7 +6161,11 @@ dl.details input[type="text"].cart_item_count {
 #cart .cart_item_comment_wrapper {
     font-family: 'Merriweather', serif;
     font-weight: 400;
-    color: #666666
+    color: #666666;
+}
+
+#form-checkout .display-textarea {
+    color: #000000;
 }
 
 #checkboxexists-checkout-accept_terms_and_conditions-accept label,
@@ -6305,6 +6363,10 @@ div.buyable {
     margin-bottom: 300px !important;
 }
 
+.price h2 {
+    font-size: 1.500em !important;
+}
+
 
 @media (max-width: 480px) {
 
@@ -6426,7 +6488,115 @@ div.buyable {
 }
 
 
+#portletPageTopRow > div:not(:first-child) .portletWrapper {
+    padding-bottom: 100px;
+}
+
+.template-collection_view #content-core {
+    padding-bottom: 60px;
+}
+
 /* BACKEND */
+.field.pfgHidden {
+    margin-bottom: 0px !important;
+}
+
+/* FORMS */
+.form-container {
+    width: 650px;
+    margin: 0 auto;
+}
+
+.form-wrapper {
+    padding-top: 50px;
+    width: 100%;
+    background-color: #ffffff;
+}
+
+#pfgWidgetWrapper {
+    float: none !important;
+    clear: none !important;
+    box-shadow: none !important;
+    width: 100% !important;
+}
+
+.template-quickedit .overlay.overlay-ajax {
+    background-color: #ffffff;
+}
+
+.template-quickedit .overlay.overlay-ajax #content {
+    padding: 20px;
+}
+
+.template-quickedit #content .pfg-form {
+    padding-top: 10px !important;
+    float: none;
+    width: 100%;
+}
+
+.template-quickedit .pfg-form {
+    padding-left: 0px;
+    padding-right: 0px;
+}
+
+.template-quickedit .draggingHook {
+    width: 10% !important;
+}
+
+.template-quickedit .overlay.overlay-ajax input[type="submit"] {
+    background: #D75745;
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+    color: #ffffff;
+    font-size: 0.875em;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #D75745;
+    text-transform: uppercase;
+    letter-spacing: 0.05em;
+    border-radius: 30px;
+    padding: 5px 12px !important;
+    line-height: 33px;
+}
+
+.template-quickedit .overlay.overlay-ajax input[type="submit"]:hover {
+    background: #000000;
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+    color: #ffffff;
+    font-size: 0.875em;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #000000;
+    text-transform: uppercase;
+    letter-spacing: 0.05em;
+    border-radius: 30px;
+    padding: 5px 12px !important;
+    line-height: 33px;
+}
+
+
+.template-quickedit .overlay.overlay-ajax {
+    font-family: 'Merriweather', serif;
+    font-weight: 400;
+    font-size: 0.870em;
+}
+
+.template-quickedit .field, .action, .PFGFieldsetWidget {
+    width: 63% !important;
+}
+
+.template-quickedit .editHook {
+    width: 
+}
+
+.template-quickedit div.header h3 {
+    height: 33px !important;
+}
+
+.template-quickedit div.widget {
+    width: 100% !important;
+}
 
 .add_cart_item, .update_cart_item {
     display: none !important;
