--- a/plonetheme/teylersmuseum/browser/css/theme.css
+++ b/plonetheme/teylersmuseum/browser/css/theme.css
@@ -1190,8 +1190,13 @@ body.template-login_form #content-core {
 }
 
 #content .pfg-form .required {
-    display: none;
+    display: inline-block;
 }
+
+input[type="radio"], input[type="checkbox"] {
+    margin-right: 5px;
+}
+
 
 #content .pfg-form .formQuestion {
     font-family: 'Merriweather', serif;
@@ -1199,6 +1204,22 @@ body.template-login_form #content-core {
     font-size: 1em;
     margin-bottom: 0;
     color: #d75745;
+}
+
+#content legend {
+    padding-left: 0px;
+}
+
+#content legend {
+    padding-left: 0px;
+    font-family: 'Merriweather', serif;
+    font-weight: 700;
+    font-size: 1em;
+    margin-bottom: 0;
+}
+
+#content .pfg-form select.form-control {
+    margin-left: 20px;
 }
 
 #content .pfg-form .formControls {
@@ -4156,6 +4177,11 @@ body.portaltype-portlet-page .slick-prev:hover, body.portaltype-portlet-page .sl
     background-color: #cb2027;
 }
 
+#FooterPortlet .social-media-portlet .btn.instagram-btn:hover {
+    background-color: #517fa4;
+}
+
+
 #FooterPortlet .museum-info {
     padding-top: 55px;
 }
@@ -4260,9 +4286,9 @@ body.portaltype-portlet-page .slick-prev:hover, body.portaltype-portlet-page .sl
 
 @media (min-width: 1200px) {
     #FooterPortlet .social-media-portlet {
-        width: 30%;
-        margin-left: 35%;
-        margin-right: 35%;
+        width: 40%;
+        margin-left: 30%;
+        margin-right: 30%;
         margin-top: 37px;
     }
 
@@ -4274,6 +4300,8 @@ body.portaltype-portlet-page .slick-prev:hover, body.portaltype-portlet-page .sl
 .portaltype-document .contentsListing {
     display: none;
 }
+
+
 
 /* PAGE OVERLAY */
 
@@ -6385,6 +6413,42 @@ div.buyable {
     text-align: right !important;
 }
 
+#content-core div[id*='parent-fieldname-text'] a.btn {
+    background: #D75745;
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+    color: #ffffff;
+    font-size: 0.875em;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #D75745;
+    text-transform: uppercase;
+    letter-spacing: 0.05em;
+    border-radius: 30px;
+    padding: 5px 12px !important;
+    line-height: 33px;
+    text-decoration: none !important;
+}
+
+#content-core div[id*='parent-fieldname-text'] a.btn:hover {
+    background: #000000;
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+    color: #ffffff !important;
+    font-size: 0.875em;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #000000;
+    text-transform: uppercase;
+    letter-spacing: 0.05em;
+    border-radius: 30px;
+    padding: 5px 12px !important;
+    line-height: 33px;
+    text-decoration: none !important;
+}
+
+
+
 /* WEBSHOP SUCCESS PAGE */
 #content a.payment_button {
     background: #D75745;
@@ -6585,6 +6649,10 @@ div.buyable {
     background-color: #ffffff;
 }
 
+#pfg-fieldwrapper {
+    padding-top: 50px;
+}
+
 #pfgWidgetWrapper {
     float: none !important;
     clear: none !important;
@@ -6656,6 +6724,10 @@ div.buyable {
 
 .template-quickedit .field, .action, .PFGFieldsetWidget {
     width: 63% !important;
+}
+
+.PFGFieldsetWidget {
+    width: 100% !important;
 }
 
 .template-quickedit .editHook {
@@ -6892,6 +6964,13 @@ body.portaltype-portlet-page.userrole-authenticated #portal-logo img {
 }
 
 
+.social-media-portlet .col-lg-2,
+.social-media-portlet .col-md-2,
+.social-media-portlet .col-sm-2,
+.social-media-portlet .col-xs-2 {
+    width: 20% !important;
+}
+
 /* EDIT PAGE */
 
 body.template-edit #content-core {
@@ -7014,6 +7093,21 @@ body.mobile .overlay-image {
     text-align: left;
 }
 
+body.template-edit.portaltype-object .kssattr-fieldname-form.widgets.text textarea.form-control {
+    height: 800px !important;
+}
+
+body.template-edit.portaltype-object #portal-header {
+    background-color: #ffffff;
+}
+
+body.template-edit.portaltype-object #content-core {
+    padding-top: 150px;
+}
+
+body.template-edit.portaltype-object #portal-logo img {
+    content: url('++resource++plonetheme.bootstrapModern.css/teylers_black.png');
+}
 
 /* BOOK VIEW */
 
@@ -7022,6 +7116,10 @@ body.template-instrument_view .slideshow img.zoomed {
     position: absolute;
     top: 0;
     left: 0;
+}
+
+#slickslideshow .slick-slide img, #slickslideshow .slick-slide iframe {
+    height: 100%;
 }
 
 /* MOBILE IMPROVEMENTS */
